--- a/book-model/pom.xml
+++ b/book-model/pom.xml
@@ -21,5 +21,9 @@
             <artifactId>book-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
